--- a/seds_website/main.css
+++ b/seds_website/main.css
@@ -7,7 +7,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(images/Preloader_11.mp4) center no-repeat #fff;
+	background: url(images/Preloader_11.gif) center no-repeat #fff;
 }
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
