--- a/profile/index.css
+++ b/profile/index.css
@@ -1,6 +1,10 @@
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{
+  scroll-behavior: smooth;
+  
+}
 a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     text-decoration: none;
     outline: none;
@@ -44,20 +48,17 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     background: #3B5998;
     color: white;
   }
-  .fa-whatsapp {
-    background: rgb(44, 194, 44);
-    color: white;
-  }
-  .fa-instagram {
-    background-image: url(images/insta_background.jpg);
+  .fa-github {
+    background:black;
     background-position: center;
     color: white;
   }
   .new_footer_area {
-    background: #e5e5e7;
+    background: #212529;
+    color: white;
 }
 .new_footer_top {
-    padding: 50px 0px 50px;
+    padding: 50px 0px 30px;
     position: relative;
       overflow-x: hidden;
 }
@@ -71,7 +72,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
 }
 .f_list{padding: 0;}
 .f_list li a{
-    color: black;
+    color: white;
 }
 .f_list li a:hover {
     color: #5e2ced;
@@ -105,6 +106,7 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     color: white;
     padding-top: 50px;
     background-color: #15173d;
+    min-height: 80vh;
 }
 .jumbotron{
     background: none;
@@ -161,3 +163,50 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
       margin: 0 auto;
       padding: 3px;
 }
+.animation-element {
+  opacity: 0;
+  position: relative;
+}
+.animation-element{
+  transition:all 800ms ease;
+  opacity: 0;
+}
+.animation-element.in-view{
+  opacity: 1;
+}
+.animation-element.slide-left {
+  -webkit-transition: all 800ms ease;
+  -moz-transition: all 800ms ease;
+  -o-transition: all 800ms ease;
+  transition: all 800ms ease;
+  opacity: 0;
+  -moz-transform: translate3d(-100px, 0px, 0px);
+  -webkit-transform: translate3d(-100px, 0px, 0px);
+  -o-transform: translate(-100px, 0px);
+  -ms-transform: translate(-100px, 0px);
+  transform: translate3d(-100px, 0px, 0px);
+}
+.animation-element.slide-right {
+  -webkit-transition: all 800ms ease;
+  -moz-transition: all 800ms ease;
+  -o-transition: all 800ms ease;
+  transition: all 800ms ease;
+  opacity: 0;
+  -moz-transform: translate3d(100px, 0px, 0px);
+  -webkit-transform: translate3d(100px, 0px, 0px);
+  -o-transform: translate(100px, 0px);
+  -ms-transform: translate(100px, 0px);
+  transform: translate3d(100px, 0px, 0px);
+}
+.animation-element.slide-left.in-view, .animation-element.slide-right.in-view {
+  opacity: 1;
+  -moz-transform: translate3d(0px, 0px, 0px);
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -o-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
+}
+tr:hover{
+  background-color: rgba(128, 128, 128, 0.178);
+}
+.animation-element.slide-left.in-view:hover, .animation-element.slide-right.in-view:hover{transform: scale(1.1);}
