--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 *{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-body{
+html{
   scroll-behavior: smooth;
-  
+}
+#container1{
+  overflow-x: hidden;
 }
 a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     text-decoration: none;
