--- a/index.css
+++ b/index.css
@@ -1,32 +1,46 @@
-*{
+* {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-html{
-  scroll-behavior: smooth;
-}
-#container1{
-  overflow-x: hidden;
- 
-}
-body{background-color: #15173d;}
 
-a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
+html {
+    scroll-behavior: smooth;
+}
+
+#container1 {
+    overflow-x: hidden;
+}
+
+body {
+    background-image: linear-gradient(to bottom right, #3f37c9, #15173d);
+}
+
+a:hover,
+a:focus,
+.btn:hover,
+.btn:focus,
+button:hover,
+button:focus {
     text-decoration: none;
     outline: none;
 }
-.container-fluid{
+
+.container-fluid {
     margin: 0;
     padding: 0;
 }
-@media (min-width:992px){
-    .navbar{
+
+@media (min-width:992px) {
+    .navbar {
         padding-left: 110px;
         padding-right: 110px;
-    }}
-.navbar-nav{
+    }
+}
+
+.navbar-nav {
     font-size: 18px;
     font-weight: 600;
 }
+
 .fa {
     padding: 10px;
     font-size: 20px;
@@ -36,36 +50,43 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-  }
-  .fa:hover {
+}
+
+.fa:hover {
     text-decoration: none;
     opacity: 0.7;
-  }
-  .fa-facebook {
+}
+
+.fa-facebook {
     background: #3B5998;
     color: white;
-  }
-  .fa-google {
+}
+
+.fa-google {
     background: #dd4b39;
     color: white;
-  }
-  .fa-linkedin {
+}
+
+.fa-linkedin {
     background: #3B5998;
     color: white;
-  }
-  .fa-github {
-    background:black;
+}
+
+.fa-github {
+    background: black;
     background-position: center;
     color: white;
-  }
-  .new_footer_area {
+}
+
+.new_footer_area {
     background: #212529;
     color: white;
 }
+
 .new_footer_top {
     padding: 50px 0px 30px;
     position: relative;
-      overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 .footer_bottom {
@@ -75,13 +96,19 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     color: #7f88a6;
     padding: 27px 0px;
 }
-.f_list{padding: 0;}
-.f_list li button{
+
+.f_list {
+    padding: 0;
+}
+
+.f_list li button {
     color: white;
 }
+
 .f_list li button:hover {
     color: #5e2ced;
 }
+
 .btn {
     box-shadow: none;
     background: #f02c54;
@@ -93,191 +120,236 @@ a:hover, a:focus, .btn:hover, .btn:focus, button:hover, button:focus {
     background: transparent;
     color: #f02c54;
 }
-.responsivecard
-{
+
+.responsivecard {
     position: relative;
     transition: all 200ms ease-in;
-    transform: scale(1); 
-
+    transform: scale(1);
 }
-.responsivecard:hover
-{
+
+.responsivecard:hover {
     box-shadow: 0px 0px 150px rgb(7, 7, 12);
     transition: all 200ms ease-in;
     transform: scale(1.1);
 }
-#container1{
+
+#container1 {
     text-align: center;
     color: white;
     padding-top: 50px;
-    background-color: #15173d;
+    background-image: linear-gradient(to bottom right, #3f37c9, #15173d);
     min-height: 80vh;
 }
-#container2{
-  text-align: center;
+
+#container2 {
+    text-align: center;
     color: white;
-    background-color: #15173d;
+    background-image: linear-gradient(to bottom right, #3f37c9, #15173d);
     min-height: 80vh;
     padding: 0;
     margin: 0;
 }
-.jumbotron{
+
+.jumbotron {
     background: none;
     margin-bottom: 0;
     padding: 50px;
     padding-left: 5%;
     padding-right: 5%;
 }
-.hovering{
+
+.hovering {
     animation-name: hovering;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     margin-left: 30px;
     margin-top: 5px;
-  }
-@keyframes hovering {
-    from { transform: translate(0,  0px); }
-    65%  { transform: translate(0, 20px); }
-    to   { transform: translate(0, -0px); }    
 }
-.heading{
+
+@keyframes hovering {
+    from {
+        transform: translate(0, 0px);
+    }
+    65% {
+        transform: translate(0, 20px);
+    }
+    to {
+        transform: translate(0, -0px);
+    }
+}
+
+.heading {
     text-align: center;
     font-weight: 600;
     color: #f02c54;
     font-size: 70px;
     text-shadow: 3px 3px 0px #d2d2d2;
 }
-@media(min-width:650px){
-#content{
-    padding: 3% 15% 3% 15%;
-}}
-#skills_tile{
+
+@media(min-width:650px) {
+    #content {
+        padding: 3% 15% 3% 15%;
+    }
+}
+
+#skills_tile {
     color: black;
     background-repeat: no-repeat;
     margin: 0px;
     background-size: cover;
     background-position: center;
     padding: 30px;
-  }
-  
-  #tile{text-decoration: none;margin-top: 30px;padding-left: 30px;padding-right: 30px;}
-#tile>div{
-  background-color: white;
-  border-radius: 20px;
-  width: 100%;
-  padding: 25px;
-  margin: 0 auto;
-  box-shadow: 0 0 5px  black;
 }
-#tile>div>#text{
-      font-size: 16px;
-      text-align: center;
-      width: 100%;
-      margin: 0 auto;
-      padding: 3px;
-}
-.animation-element {
-  opacity: 0;
-  position: relative;
-}
-.animation-element{
-  transition:all 800ms ease;
-  opacity: 0;
-}
-.animation-element.in-view{
-  opacity: 1;
-}
-.animation-element.slide-left {
-  -webkit-transition: all 800ms ease;
-  -moz-transition: all 800ms ease;
-  -o-transition: all 800ms ease;
-  transition: all 800ms ease;
-  opacity: 0;
-  -moz-transform: translate3d(-100px, 0px, 0px);
-  -webkit-transform: translate3d(-100px, 0px, 0px);
-  -o-transform: translate(-100px, 0px);
-  -ms-transform: translate(-100px, 0px);
-  transform: translate3d(-100px, 0px, 0px);
-}
-.animation-element.slide-right {
-  -webkit-transition: all 800ms ease;
-  -moz-transition: all 800ms ease;
-  -o-transition: all 800ms ease;
-  transition: all 800ms ease;
-  opacity: 0;
-  -moz-transform: translate3d(100px, 0px, 0px);
-  -webkit-transform: translate3d(100px, 0px, 0px);
-  -o-transform: translate(100px, 0px);
-  -ms-transform: translate(100px, 0px);
-  transform: translate3d(100px, 0px, 0px);
-}
-.animation-element.slide-left.in-view, .animation-element.slide-right.in-view {
-  opacity: 1;
-  -moz-transform: translate3d(0px, 0px, 0px);
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -o-transform: translate(0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
-}
-tr:hover{
-  background-color: rgba(128, 128, 128, 0.178);
-}
-.animation-element.slide-left.in-view:hover, .animation-element.slide-right.in-view:hover{transform: scale(1.1);}
 
+#tile {
+    text-decoration: none;
+    margin-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+#tile>div {
+    background-color: white;
+    border-radius: 20px;
+    width: 100%;
+    padding: 25px;
+    margin: 0 auto;
+    box-shadow: 0 0 5px black;
+}
+
+#tile>div>#text {
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    padding: 3px;
+}
+
+.animation-element {
+    opacity: 0;
+    position: relative;
+}
+
+.animation-element {
+    transition: all 800ms ease;
+    opacity: 0;
+}
+
+.animation-element.in-view {
+    opacity: 1;
+}
+
+.animation-element.slide-left {
+    -webkit-transition: all 800ms ease;
+    -moz-transition: all 800ms ease;
+    -o-transition: all 800ms ease;
+    transition: all 800ms ease;
+    opacity: 0;
+    -moz-transform: translate3d(-100px, 0px, 0px);
+    -webkit-transform: translate3d(-100px, 0px, 0px);
+    -o-transform: translate(-100px, 0px);
+    -ms-transform: translate(-100px, 0px);
+    transform: translate3d(-100px, 0px, 0px);
+}
+
+.animation-element.slide-right {
+    -webkit-transition: all 800ms ease;
+    -moz-transition: all 800ms ease;
+    -o-transition: all 800ms ease;
+    transition: all 800ms ease;
+    opacity: 0;
+    -moz-transform: translate3d(100px, 0px, 0px);
+    -webkit-transform: translate3d(100px, 0px, 0px);
+    -o-transform: translate(100px, 0px);
+    -ms-transform: translate(100px, 0px);
+    transform: translate3d(100px, 0px, 0px);
+}
+
+.animation-element.slide-left.in-view,
+.animation-element.slide-right.in-view {
+    opacity: 1;
+    -moz-transform: translate3d(0px, 0px, 0px);
+    -webkit-transform: translate3d(0px, 0px, 0px);
+    -o-transform: translate(0px, 0px);
+    -ms-transform: translate(0px, 0px);
+    transform: translate3d(0px, 0px, 0px);
+}
+
+tr:hover {
+    background-color: rgba(128, 128, 128, 0.178);
+}
+
+.animation-element.slide-left.in-view:hover,
+.animation-element.slide-right.in-view:hover {
+    transform: scale(1.1);
+}
 
 ::-webkit-scrollbar {
-	width: 10px
-}
-::-webkit-scrollbar-track {
-	background: #080808
-}
-::-webkit-scrollbar-thumb {
-	background: #888
-}
-::-webkit-scrollbar-thumb:hover {
-	background: #555
+    width: 10px
 }
 
-.project{
-  text-align: left;
-  margin-bottom: 50px;
-  --title-color:orangered;
-  --title-hover-color:black;
-  --desc-color:#fcd2c9ff;
-  --desc-hover-color:#fdf9d5;
+::-webkit-scrollbar-track {
+    background: #080808
 }
-.project .title{
-  transition: all ease 500ms;
-  background-color: var(--title-color);
-  border-radius: 10px;
-  width: fit-content;
-  padding: 10px;
-  color: navajowhite;
-  font-weight: bold;
-  margin: -60px 0 10px -45px;
-  z-index: 1;
+
+::-webkit-scrollbar-thumb {
+    background: #888
 }
-.project .description{
-transition: all ease 500ms;
-  background-color: var(--desc-color);
-  padding: 35px 30px 20px 30px;
-  border-radius: 15px;
-  z-index: 0;
-  color: black;
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555
 }
-.project .description:hover{
-  --title-color:var(--title-hover-color);
-  --desc-color:var(--desc-hover-color);
+
+.project {
+    text-align: left;
+    margin-bottom: 50px;
+    --title-color: orangered;
+    --title-hover-color: black;
+    --desc-color: #fcd2c9ff;
+    --desc-hover-color: #fdf9d5;
 }
-button{
-  background: none;
-  border: none;
+
+.project .title {
+    transition: all ease 500ms;
+    background-color: var(--title-color);
+    border-radius: 10px;
+    width: fit-content;
+    padding: 10px;
+    color: navajowhite;
+    font-weight: bold;
+    margin: -60px 0 10px -45px;
+    z-index: 1;
 }
-#container1{
-  animation: fadein ease-in 1s;
+
+.project .description {
+    transition: all ease 500ms;
+    background-color: var(--desc-color);
+    padding: 35px 30px 20px 30px;
+    border-radius: 15px;
+    z-index: 0;
+    color: black;
 }
+
+.project .description:hover {
+    --title-color: var(--title-hover-color);
+    --desc-color: var(--desc-hover-color);
+}
+
+button {
+    background: none;
+    border: none;
+}
+
+#container1 {
+    animation: fadein ease-in 1s;
+}
+
 @keyframes fadein {
-  0% {opacity: 0;}
-  100%{opacity: 1;}
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
