--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to bottom right, #3f37c9, #15173d);
+    background-image: linear-gradient(to bottom right, #312aa5, #15173d);
 }
 
 a:hover,
@@ -137,14 +137,14 @@ button:focus {
     text-align: center;
     color: white;
     padding-top: 50px;
-    background-image: linear-gradient(to bottom right, #3f37c9, #15173d);
+    background-image: linear-gradient(to bottom right, #312aa5, #15173d);
     min-height: 80vh;
 }
 
 #container2 {
     text-align: center;
     color: white;
-    background-image: linear-gradient(to bottom right, #3f37c9, #15173d);
+    background-image: linear-gradient(to bottom right, #312aa5, #15173d);
     min-height: 80vh;
     padding: 0;
     margin: 0;
@@ -352,4 +352,12 @@ button {
     100% {
         opacity: 1;
     }
+}
+
+.navbar {
+    box-shadow: 2px 2px 5px rgb(37, 37, 37);
+}
+
+.new_footer_area {
+    border-top: 2px 2px 5px rgb(37, 37, 37);
 }
